--- a/client/core/project.html
+++ b/client/core/project.html
@@ -1,10 +1,69 @@
-<div class="container">
-    <div class="input-group mb-3">
-        <input type="text" class="form-control" id="project_name" placeholder="Project name" aria-label="Project name" aria-describedby="basic-addon2">
-        <div class="input-group-append">
-            <button class="btn btn-outline-secondary" id="create_project" type="button" onclick="create_project()">Create</button>
+
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-outline-primary btn-lg btn-block" data-toggle="modal" data-target="#exampleModalCenter">
+        Create new project
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Project configuration</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                    <div class="form-group">
+                        <label for="project_name">Project name</label>
+                        <input type="text" class="form-control" id="project_name" placeholder="my_project">
+                    </div>
+                    <div class="form-group">
+                        <label for="project_description">Description</label>
+                        <textarea class="form-control" id="project_description" rows="3"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="project_ppr">Pictures per complete rotation</label>
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <input type="range" class="form-control" id="project_ppr" min="10" max="36" value="15" onchange="update_ppr_placeholder()" oninput="update_ppr_placeholder()">
+                            </div>
+                            <div class="col-lg-4">
+                                <h4 id="ppr_placeholder">15</h4>
+                            </div>
+                        </div>
+                    </div>
+                        <div class="form-group">
+                            <label for="project_pres">Pictures resolution</label>
+                            <div class="row">
+                                <div class="col-lg-8">
+                                    <input type="range" class="form-control" id="project_pres" min="1" max="3" value="2" step="1" onchange="update_pres_placeholder(this.value)" oninput="update_pres_placeholder(this.value)">
+                                </div>
+                                <div class="col-lg-4">
+                                    <h4 id="pres_placeholder">1640x1232</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h4 id="estimated_size_placeholder">Estimated size : 18.59Mb / complete rotation</h4>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="create_project()">Create project</button>
+                </div>
+            </div>
         </div>
     </div>
+
+
 
 
     <div class="row">
@@ -146,4 +205,7 @@
             </div>
         </div>
     </div>
-</div>
+
+    <script>
+        updateEstimatedSize()
+    </script>
