--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,7 @@
         </div>
         <script>
             var users, websocket;
+            var projects_data;
 
             var retry = 0;
 
@@ -95,6 +96,13 @@
                             break;
                         case 'state':
                             //@TODO capter les changements dans les variables du scanner
+                            break;
+                        case 'projects_data':
+                            console.log(data.data);
+                            projects_data = data.data;
+                            if (document.getElementById('menu_project').classList.contains('active')){
+                                drawProjectContent();
+                            }
                             break;
                         default:
                             console.error(
@@ -166,14 +174,54 @@
             }
 
             function drawProjectContent() {
-                var fs = require("fs");
-                var text = fs.readFileSync("./core/project.html");
-                document.getElementById('content').innerHTML = text;
 
                 document.getElementById('menu_home').classList.remove("active");
                 document.getElementById('menu_project').classList.add("active");
                 document.getElementById('menu_control').classList.remove("active");
+
+                let projects_html = "";
+                projects_data.forEach(function(element) {
+                    projects_html += generate_project_html_element(JSON.parse(element));
+                });
+
+                var fs = require("fs");
+                var content = fs.readFileSync("./core/project.html") + "";
+                content = content.replace("{{PROJECT_PLACEHOLDER}}", projects_html);
+                document.getElementById('content').innerHTML = content;
+
+                $("#search_input").on("keyup", function() {
+                    var value = $(this).val().toLowerCase();
+                    $("#projects .col-md-4").filter(function() {
+                        console.log($(this).text());
+                        $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                    });
+                });
+
             }
+
+            function generate_project_html_element(project_data) {
+                return "<div class=\"col-md-4\" id='"+project_data["name"]+"'>\n" +
+                "            <div class=\"card mb-4 box-shadow\">\n" +
+                "                <img class=\"card-img-top\" data-src=\"holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail\" alt=\"Thumbnail [100%x225]\" style=\"height: 225px; width: 100%; display: block;\" src=\"data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22350%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20350%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16b064f20ca%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A18pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16b064f20ca%22%3E%3Crect%20width%3D%22350%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22113.5%22%20y%3D%22120.9%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E\" data-holder-rendered=\"true\">\n" +
+                "                <div class=\"card-body\">\n" +
+                "                    <h5 className=\"card-title\">"+ project_data["name"] + "</h5>\n" +
+                "                    <p class=\"card-text\">"+ project_data["description"] + "</p>\n" +
+                "                    <p class=\"card-text\">Pictures per revolution : "+ project_data["pict_per_rotation"] + "</p>\n" +
+                "                    <p class=\"card-text\">Pictures resolution : "+ project_data["pict_res"] + "</p>\n" +
+                "                    <div class=\"d-flex justify-content-between align-items-center\">\n" +
+                "                        <div class=\"btn-group\">\n" +
+                "                            <button type=\"button\" class=\"btn btn-sm btn-outline-secondary\">View</button>\n" +
+                "                            <button type=\"button\" class=\"btn btn-sm btn-outline-secondary\">Edit</button>\n" +
+                "                        </div>\n" +
+                "                        <small class=\"text-muted\">0 Mb</small>\n" +
+                        //@TODO project size
+                "                    </div>\n" +
+                "                </div>\n" +
+                "            </div>\n" +
+                "        </div>"
+            }
+
+
 
             /**
              * Turn bed clockwise
@@ -261,7 +309,6 @@
 
                 document.getElementById("estimated_size_placeholder").innerHTML = new_placeholder + total_size.toFixed(2) + "Mb / complete rotation";
             }
-
 
         </script>
     </body>
