--- a/client/index.html
+++ b/client/index.html
@@ -89,7 +89,6 @@
 
                 websocket.onmessage = function(event) {
                     data = JSON.parse(event.data);
-                    console.log(data);
                     switch (data.type) {
                         case 'users':
                             //document.getElementById('users').innerText = data.count.toString() + " user" + (data.count > 1 ? "s" : "");
@@ -98,7 +97,6 @@
                             //@TODO capter les changements dans les variables du scanner
                             break;
                         case 'projects_data':
-                            console.log(data.data);
                             projects_data = data.data;
                             if (document.getElementById('menu_project').classList.contains('active')){
                                 drawProjectContent();
@@ -199,9 +197,10 @@
             }
 
             function generate_project_html_element(project_data) {
+                console.log(project_data);
                 return "<div class=\"col-md-4\" id='"+project_data["name"]+"'>\n" +
                 "            <div class=\"card mb-4 box-shadow\">\n" +
-                "                <img class=\"card-img-top\" data-src=\"holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail\" alt=\"Thumbnail [100%x225]\" style=\"height: 225px; width: 100%; display: block;\" src=\"data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22350%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20350%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16b064f20ca%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A18pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16b064f20ca%22%3E%3Crect%20width%3D%22350%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22113.5%22%20y%3D%22120.9%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E\" data-holder-rendered=\"true\">\n" +
+                "                <img class=\"card-img-top\" src=\"data:image/jpg;base64, " + project_data["preview_data"] + "\" data-holder-rendered=\"true\">\n" +
                 "                <div class=\"card-body\">\n" +
                 "                    <h5 className=\"card-title\">"+ project_data["name"] + "</h5>\n" +
                 "                    <p class=\"card-text\">"+ project_data["description"] + "</p>\n" +
@@ -209,10 +208,10 @@
                 "                    <p class=\"card-text\">Pictures resolution : "+ project_data["pict_res"] + "</p>\n" +
                 "                    <div class=\"d-flex justify-content-between align-items-center\">\n" +
                 "                        <div class=\"btn-group\">\n" +
-                "                            <button type=\"button\" class=\"btn btn-sm btn-outline-secondary\">View</button>\n" +
+                "                            <button type=\"button\" class=\"btn btn-sm btn-outline-secondary\" onclick='start_loop_capture(\""+ project_data["name"] +"\")'>Start loop capture</button>\n" +
                 "                            <button type=\"button\" class=\"btn btn-sm btn-outline-secondary\">Edit</button>\n" +
                 "                        </div>\n" +
-                "                        <small class=\"text-muted\">0 Mb</small>\n" +
+                "                        <small class=\"text-muted\">"+ project_data['size'] +" Mb</small>\n" +
                         //@TODO project size
                 "                    </div>\n" +
                 "                </div>\n" +
@@ -238,6 +237,14 @@
                 websocket.send(JSON.stringify({
                     action: "turn_bed_CCW",
                     plateau_degree: angle.toString()
+                }))
+            }
+
+            function start_loop_capture(project_name){
+                console.log(project_name + "LOOP");
+                websocket.send(JSON.stringify({
+                    action: "loop_capture",
+                    project_name: project_name
                 }))
             }
 
