ready for production

--- a/client/index.html
+++ b/client/index.html
@@ -71,7 +71,7 @@
                 /**
                  * RPi address
                  */
-                websocket = new WebSocket("ws://localhost:6789/");
+                websocket = new WebSocket("ws://wcscanner.local:6789/");
 
                 setInterval(get_connection_status, 1000);
 
